# rhizo-ale

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
doc/: VARA HF Modem.ppt  fsm.txt
src/: Makefile.am  ale_buf.c  ale_buf.h  ale_fsm.c  ale_main.c  ale_shm.c  ale_shm.h  ale_vty.c  internal.h
tests/buf_test/: Makefile  circular_buffer.c  circular_buffer.h  circular_buffer_test.c  reader.c
tests/shm_test/: shm.c  shm2.c
